# papers

./: .gitignore  CONTRIBUTE.md  Cargo.toml  README.md  build.sh  restart.sh
.github/workflows/: ci.yml
.trunk/: trunk.yaml
src/: adapter_helpers.rs  arxiv2wikidata.rs  author_name_string.rs  crossref2wikidata.rs  datacite2wikidata.rs  europepmc2wikidata.rs  generic_author_info.rs  http_client.rs  identifiers.rs  language_cache.rs  lib.rs  openalex2wikidata.rs  orcid2wikidata.rs  pmc2wikidata.rs  pubmed2wikidata.rs  rate_limit_log.rs  scientific_publication_adapter.rs  semanticscholar.rs  semanticscholar2wikidata.rs  sourcemd.rs  sourcemd_bot.rs  sourcemd_command.rs  sourcemd_config.rs  test_helpers.rs  wikidata_interaction.rs  wikidata_papers.rs  wikidata_string_cache.rs
src/generic_author_info/: mod.rs  tests.rs
test_data/: api_siteinfo.json  search_empty.json  search_found_q15757256.json  search_found_q46664291.json
