[package]
name = "papers"
version = "0.1.0"
authors = ["Magnus Manske <magnusmanske@googlemail.com>"]
edition = "2018"
description = "A library to allow creation and updates of Wikidata items for scientific publications, authors, and related info"
repository = "https://github.com/magnusmanske/papers"
keywords = ["publications","papers","science","wikidata"]
categories = ["api-bindings","science"]
license="MIT"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
serde_json = "1"
mysql = { version="16.0.2" , features = ["ssl"] }
reqwest = "0.9.18"
config = "0.9.2"
regex = "1"
lazy_static = "1"
chrono = "0.4.7"
smallstring = "0.1.2"
rayon = "*"

#crossref = "*"
crossref = { git = "https://github.com/MattsSe/crossref-rs" }

semanticscholar = "*"

#orcid="*"
orcid = { git = "https://github.com/magnusmanske/orcid_rs" }

#pubmed="*"
pubmed = { git = "https://github.com/magnusmanske/pubmed_rs" }
#pubmed = { path='../pubmed' }

#wikibase = { path='../wikibase_rs' }
wikibase = { git="https://gitlab.com/tobias47n9e/wikibase_rs",branch = "rayon"}
#wikibase = "*"
